src/objects/Audience__c.object
<CustomObject>
    <description>Represents the different Audience and Audience Group, which will be used for segment any record.</description>
    <fields>
        <fullName>AudienceCriteria__c</fullName>
        <label>Audience Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AudienceNumber__c</fullName>
        <displayFormat>{00000}</displayFormat>
        <label>Audience Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Cluster__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Cluster</label>
        <referenceTo>Cluster__c</referenceTo>
        <relationshipLabel>Audiences</relationshipLabel>
        <relationshipName>Audiences</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <label>External Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MatchCriteria__c</fullName>
        <inlineHelpText>Match Criteria governs how and when filters apply to your criteria. Use AND and OR operators to fine-tune your results.</inlineHelpText>
        <label>Match Criteria</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Any</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReferenceAudienceExternalIds__c</fullName>
        <label>Reference Audience External Ids</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ReferenceAudience__c</fullName>
        <label>Reference Audience</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Status</valueSetName>
        </valueSet>
    </fields>
    <label>Audience</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ExternalId__c</columns>
        <columns>Cluster__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AudienceGroups</fullName>
        <columns>NAME</columns>
        <columns>ExternalId__c</columns>
        <columns>Cluster__c</columns>
        <columns>ReferenceAudienceExternalIds__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Audience__c.AudienceGroup</value>
        </filters>
        <label>Audience Groups</label>
    </listViews>
    <listViews>
        <fullName>Audiences</fullName>
        <columns>NAME</columns>
        <columns>ExternalId__c</columns>
        <columns>Cluster__c</columns>
        <columns>Status__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Audience__c.Audience</value>
        </filters>
        <label>Audiences</label>
    </listViews>
    <nameField>
        <label>Audience Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Audiences</pluralLabel>
    <recordTypes>
        <fullName>Audience</fullName>
        <active>true</active>
        <description>Configure a new Audience to segment records.</description>
        <label>Audience</label>
    </recordTypes>
    <recordTypes>
        <fullName>AudienceGroup</fullName>
        <active>true</active>
        <description>Configure a new Audience Group who is related to any record.</description>
        <label>Audience Group</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>